Fix word wrapping on microposts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,7 @@
 
 		.content {
 			display: block;
+			word-wrap: break-word;
 		}
 
 		.timestamp {
